--- a/share-db/share-harbor-lite-install.yaml
+++ b/share-db/share-harbor-lite-install.yaml
@@ -177,7 +177,7 @@ database:
   # and fill the connection informations in "external" section
   type: external
   external:
-    host: "share-postgresql"
+    host: "db-postgresql-headless"
     port: "5432"
     username: "iiidevops"
     password: "IIIdevops123!"
@@ -208,7 +208,7 @@ redis:
     # support redis, redis+sentinel
     # addr for redis: <host_redis>:<port_redis>
     # addr for redis+sentinel: <host_sentinel1>:<port_sentinel1>,<host_sentinel2>:<port_sentinel2>,<host_sentinel3>:<port_sentinel3>
-    addr: "share-redis-master:6379"
+    addr: "redis-headless:6379"
     # The "coreDatabaseIndex" must be "0" as the library Harbor
     # used doesn't support configuring it
     coreDatabaseIndex: "0"
