--- a/share-db/share-redis-install.yaml
+++ b/share-db/share-redis-install.yaml
@@ -1,5 +1,5 @@
 global:
-  storageClass: iiidevops-nfs-storage
+  storageClass: "iiidevops-nfs-storage"
   redis:
     password: IIIdevops123!
 usePassword: true
