--- a/share-db/share-redmine-install.yaml
+++ b/share-db/share-redmine-install.yaml
@@ -8,14 +8,15 @@ mariadb:
   enabled: false
 databaseType: "postgresql"
 externalDatabase:
-  host: share-postgresql
+  host: db-postgresql-headless
   name: redmine
   user: iiidevops
   password: IIIdevops123!
   port: 5432
 replicas: 1
 ingress:
-  hostname: redmine.10.20.0.67.xip.io
+  enabled: true
+  hostname: redmine.10.20.0.68.xip.io
   tls: true
 persistence:
   enabled: true
