--- a/share-db/share-iiidevops/devopsapi-deployment.yaml
+++ b/share-db/share-iiidevops/devopsapi-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 , Ref - devops-
 kind: Deployment
 metadata:
   name: devopsapi
+  namespace: devops
 spec:
   replicas: 1
   selector:
@@ -14,13 +15,13 @@ spec:
     spec:
       containers:
       - name: devopsapi
-        image: iiiorg/devops-api:{{iiidevops_ver}}
-        imagePullPolicy: Always
+        image: iiiorg/devops-api:develop
+        #imagePullPolicy: Always
         ports:
         - containerPort: 10009
         env:
         - name: SQLALCHEMY_DATABASE_URI
-          value: "postgresql://iiidevops:IIIdevops123!@db-postgresql-headless:5432/devopsdb"
+          value: "postgresql://postgres:IIIdevops123!@db-postgresql-headless:5432/devopsdb"
         - name: SQLALCHEMY_TRACK_MODIFICATIONS
           value: "false"
         - name: JWT_SECRET_KEY
@@ -48,27 +49,27 @@ spec:
         - name: GITLAB_PRIVATE_TOKEN
           value: "xCbMSoiury2bmWoXhNzN"
         - name: RANCHER_IP_PORT
-          value: "{{rancher_ip}}:3443"
+          value: "rancher.10.20.0.68.xip.io:80"
         - name: RANCHER_ADMIN_ACCOUNT
           value: "admin"
         - name: RANCHER_ADMIN_PASSWORD
-          value: "{{rancher_admin_password}}"
+          value: "IIIdevops123!"
         - name: RANCHER_CLUSTER_NAME
-          value: "iiidevops-k8s"
+          value: "local"
         - name: CHECKMARX_ORIGIN
-          value: "{{checkmarx_origin}}"
+          value: ""
         - name: CHECKMARX_USERNAME
-          value: "{{checkmarx_username}}"
+          value: ""
         - name: CHECKMARX_PASSWORD
-          value: "{{checkmarx_password}}"
+          value: ""
         - name: CHECKMARX_SECRET
-          value: "{{checkmarx_secret}}"
+          value: ""
         - name: SONARQUBE_INTERNAL_BASE_URL
           value: "http://sonarqube-server-service:9000/api"
         - name: SONARQUBE_EXTERNAL_BASE_URL
-          value: "{{sonarqube_domain_name}}"
+          value: "https://sonar.10.20.0.68.xip.io"
         - name: SONARQUBE_ADMIN_TOKEN
-          value: "{{sonarqube_admin_token}}"
+          value: "5956db332faccc953186064e96dc2a21880437ae"
         - name: HARBOR_INTERNAL_BASE_URL
           value: "https://devops-harbor-harbor-core:443/api/v2.0"
         - name: HARBOR_EXTERNAL_BASE_URL
@@ -78,7 +79,7 @@ spec:
         - name: HARBOR_PASSWORD
           value: "IIIdevops123!"
         - name: WEBINSPECT_BASE_URL
-          value: ""
+          value: "http://10.50.0.201:8083/webinspect"
         - name: ADMIN_INIT_LOGIN
           value: "admin"
         - name: ADMIN_INIT_EMAIL
