更新harbor lite value

--- a/share-db/share-harbor-lite-install.yaml
+++ b/share-db/share-harbor-lite-install.yaml
@@ -1,7 +1,3 @@
-clair:
-  replicas: 1
-registry:
-  replicas: 1
 expose:
   type: ingress
   tls:
@@ -121,57 +117,6 @@ proxy:
     - jobservice
     #- trivy
 
-# The custom ca bundle secret, the secret must contain key named "ca.crt"
-# which will be injected into the trust store for chartmuseum, core, jobservice, registry, trivy components
-# caBundleSecretName: ""
-
-## UAA Authentication Options
-# If you're using UAA for authentication behind a self-signed
-# certificate you will need to provide the CA Cert.
-# Set uaaSecretName below to provide a pre-created secret that
-# contains a base64 encoded CA Certificate named `ca.crt`.
-# uaaSecretName:
-
-# If expose the service via "ingress", the Nginx will not be used
-nginx:
-  image:
-    repository: goharbor/nginx-photon
-    tag: dev
-  # set the service account to be used, default if left empty
-  serviceAccountName: ""
-  replicas: 1
-  # resources:
-  #  requests:
-  #    memory: 256Mi
-  #    cpu: 100m
-  nodeSelector: {}
-  tolerations: []
-  affinity: {}
-  ## Additional deployment annotations
-  podAnnotations: {}
-
-portal:
-  replicas: 1
-
-core:
-  replicas: 1
-  ## Startup probe values
-  startupProbe:
-    enabled: true
-    initialDelaySeconds: 10
-
-jobservice:
-  replicas: 1
-
-chartmuseum:
-  enabled: false
-
-trivy:
-  enabled: false
-
-notary:
-  enabled: false
-
 database:
   # if external database is used, set "type" to "external"
   # and fill the connection informations in "external" section
@@ -218,10 +163,30 @@ redis:
     trivyAdapterIndex: "5"
     password: "IIIdevops123!"
 
+# 開啟與關閉設定+部屬數量管理
+metrics:
+  enabled: false
+chartmuseum:
+  enabled: false
+trivy:
+  enabled: false
+notary:
+  enabled: false
+clair:
+  replicas: 1
+registry:
+  replicas: 1
+portal:
+  replicas: 1
+jobservice:
+  replicas: 1
+core:
+  replicas: 1
+  ## Startup probe values
+  startupProbe:
+    enabled: true
+    initialDelaySeconds: 10
 exporter:
     replicas: 1
     cacheDuration: 30
     cacheCleanInterval: 14400
-
-metrics:
-  enabled: false
